@@ -65,12 +65,8 @@ typedef int errno_t;
 /* Copying functions: */
 void *memccpy (void */*restrict*/ dst, const void */*restict*/ src, int c, size_t n);
 extern void *memcpy (void * /*restrict */ dest, const void * /*restrict*/ src, size_t n);
-#if defined(__SDCC_z80) || defined(__SDCC_z180) || defined(__SDCC_r2k) || defined(__SDCC_r2ka) || defined(__SDCC_r3ka)
-extern void *memmove (void *dest, const void *src, size_t n) __preserves_regs(iyl, iyh);
-#else
 extern void *memmove (void *dest, const void *src, size_t n);
-#endif
-#if defined(__SDCC_z80) || defined(__SDCC_z180) || defined(__SDCC_r2k) || defined(__SDCC_r2ka) || defined(__SDCC_r3ka) || defined(__SDCC_tlcs90) || defined (__SDCC_ez80_z80) || defined (__SDCC_z80n)
+#if defined(__SDCC_z80) || defined(__SDCC_z180) || defined(__SDCC_tlcs90) || defined (__SDCC_ez80_z80) || defined (__SDCC_z80n)
 extern char *strcpy (char * /*restrict*/ dest, const char * /*restrict*/ src) __preserves_regs(iyl, iyh);
 #else
 extern char *strcpy (char * /*restrict*/ dest, const char * /*restrict*/ src);
